--- a/README
+++ b/README
@@ -1,17 +1,24 @@
 This small server once configured allow to manipulate virtual photos albums.
 It is intented to be used from a mobile phone app to to post photos, and then statically generate galleries optionaly proteced by .htaccess
 
+
+To run pass -config config.ini
+You can override option with -flagX=foobar syntax
+
+
+
+---------------
 I created this project to have a simple way to share my daugther's pictures (Olivia => Golivia, I probably deserve a price for originality) with the family on a self-hosted solution
 I don't really want to use flickr, don't want to install apps to spy on me, just want a simple "add to online gallery" functionality and want to play a bit with golang :)
 
+I originally started with native golang library to resize images, then got hit by a bug on my camera (truncated data inside jpg)
+I then switched to imagemagick hoping it would cope with this problem, but it did not (so now I could just benchmark for fun and go back to pure golang for simplicity)
+
 
 The progress:
-- models : 50 %
-- api : 0 %
-- static generation / html templates : 0 %
-
-
-ETA for a proof-of-concept: April 2016
+- models : 80 %
+- api : 80 %
+- static generation / html templates : 0 % need some clean css
 
 
 ----
